--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 title: "Generative Modeling With Inverse Heat Dissipation"
 description: "" 
-arxiv: ""
+arxiv: "todo"
 is_github_public: true
 markdown: kramdown
