arxiv link added

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: "Generative Modelling With Inverse Heat Dissipation"
 
 description: "Severi Rissanen · [Markus Heinonen](https://users.aalto.fi/~heinom10/) · [Arno Solin](http://arno.solin.fi)" 
 
-arxiv: "todo"
+arxiv: https://arxiv.org/abs/2206.13397
 
 is_github_public: false
 
