--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,6 @@ description: "Severi Rissanen · [Markus Heinonen](https://users.aalto.fi/~heino
 
 arxiv: https://arxiv.org/abs/2206.13397
 
-is_github_public: false
+is_github_public: true
 
 markdown: kramdown
