--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ exclude:
 title: "Generative Modelling With Inverse Heat Dissipation"
 
 description: >
-  Severi Rissanen · [Markus Heinonen](https://users.aalto.fi/~heinom10/) · [Arno Solin](http://arno.solin.fi)  
-  International Conference on Learning Representations (ICLR 2023)
+  "Severi Rissanen · [Markus Heinonen](https://users.aalto.fi/~heinom10/) · [Arno Solin](http://arno.solin.fi) \
+  International Conference on Learning Representations (ICLR 2023)"
 
 arxiv: https://arxiv.org/abs/2206.13397
 
